--- a/index.html
+++ b/index.html
@@ -10,24 +10,73 @@
         .hero { background: #f8f9fa; padding: 50px 20px; }
         .cta-btn { background: #25d366; color: white; font-size: 18px; }
         .cta-btn:hover { background: #1ebe57; }
+        .feature-img { width: 100%; max-height: 250px; object-fit: cover; }
+        .navbar { background: #343a40; }
+        .navbar-dark .navbar-nav .nav-link { color: white; }
     </style>
 </head>
 <body>
-    <div class="container text-center hero">
-        <h1 class="mb-4">🎁 ماذا ستحصل عليه؟</h1>
-        <p>✅ برامج احترافية مفعلة مدى الحياة</p>
-        <ul class="list-group text-end">
-            <li class="list-group-item">🔹 Adobe Suite (Photoshop, Illustrator, Premiere Pro...)</li>
-            <li class="list-group-item">🔹 Pack Office (Word, Excel, PowerPoint...)</li>
-            <li class="list-group-item">🔹 برامج محاسبية متقدمة لإدارة الفواتير والمخزون</li>
-        </ul>
-        <p class="mt-3">📂 ملفات إدارية وقانونية شاملة</p>
-        <p>✔️ نماذج عقود، شكايات، تصاريح ودراسات جدوى</p>
-        <p>✔️ مستندات لتسيير الشركات، الضرائب، CNSS</p>
-        <p>🎓 +750 دورة تدريبية بالفيديو في البرمجة، التسويق الرقمي، التصميم والمونتاج</p>
-        <p>📚 مكتبة كتب ضخمة + مشاريع أرشيفية قابلة للتعديل!</p>
-        <p class="text-danger fw-bold">⏳ العرض محدود، سارع الآن!</p>
-        <a href="https://wa.me/yourwhatsappnumber" class="btn cta-btn mt-3">💬 اطلب نسختك عبر واتساب</a>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">📦 عروضنا</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#programs">البرامج</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#files">الملفات</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#courses">الدورات</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">تواصل معنا</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav><!-- Hero Section -->
+<section class="hero text-center">
+    <h1 class="mb-4">🎁 ماذا ستحصل عليه؟</h1>
+    <p class="text-danger fw-bold">⏳ العرض محدود، سارع الآن!</p>
+    <a href="https://wa.me/yourwhatsappnumber" class="btn cta-btn mt-3">💬 اطلب نسختك عبر واتساب</a>
+</section>
+
+<!-- Programs Section -->
+<section id="programs" class="container my-5">
+    <h2 class="text-center mb-4">✅ برامج احترافية</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <img src="adobe-suite.jpg" class="feature-img mb-2" alt="Adobe Suite">
+            <p>🔹 Adobe Suite (Photoshop, Illustrator, Premiere Pro...)</p>
+        </div>
+        <div class="col-md-4">
+            <img src="office-pack.jpg" class="feature-img mb-2" alt="Pack Office">
+            <p>🔹 Pack Office (Word, Excel, PowerPoint...)</p>
+        </div>
+        <div class="col-md-4">
+            <img src="accounting.jpg" class="feature-img mb-2" alt="برامج المحاسبة">
+            <p>🔹 برامج محاسبية متقدمة لإدارة الفواتير والمخزون</p>
+        </div>
     </div>
+</section>
+
+<!-- Files Section -->
+<section id="files" class="container my-5">
+    <h2 class="text-center mb-4">📂 ملفات إدارية وقانونية</h2>
+    <p>✔️ نماذج عقود، شكايات، تصاريح ودراسات جدوى</p>
+    <p>✔️ مستندات لتسيير الشركات، الضرائب، CNSS</p>
+</section>
+
+<!-- Courses Section -->
+<section id="courses" class="container my-5">
+    <h2 class="text-center mb-4">🎓 دورات تدريبية</h2>
+    <img src="courses.jpg" class="img-fluid mb-3" alt="دورات تدريبية">
+    <p>📌 +750 دورة تدريبية في البرمجة، التسويق الرقمي، التصميم والمونتاج</p>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="container text-center my-5">
+    <h2>💬 اطلب نسختك الآن!</h2>
+    <a href="https://wa.me/yourwhatsappnumber" class="btn cta-btn mt-3">💬 تواصل عبر واتساب</a>
+</section>
+
 </body>
 </html>
