--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>احصل على أقوى البرامج والملفات الإدارية</title>
+    <title>edigitalspacks - احصل على أقوى البرامج والملفات الإدارية</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function startCountdown(duration) {
+            let timer = duration, minutes, seconds;
+            setInterval(function () {
+                minutes = parseInt(timer / 60, 10);
+                seconds = parseInt(timer % 60, 10);
+                minutes = minutes < 10 ? "0" + minutes : minutes;
+                seconds = seconds < 10 ? "0" + seconds : seconds;
+                document.getElementById("countdown").textContent = minutes + ":" + seconds;
+                if (--timer < 0) {
+                    document.getElementById("countdown").textContent = "انتهى العرض!";
+                }
+            }, 1000);
+        }
+        window.onload = function () {
+            startCountdown(40 * 60);
+        };
+    </script>
     <style>
         body { direction: rtl; text-align: right; }
         .hero { background: #f8f9fa; padding: 50px 20px; }
@@ -13,13 +31,14 @@
         .feature-img { width: 100%; max-height: 250px; object-fit: cover; }
         .navbar { background: #343a40; }
         .navbar-dark .navbar-nav .nav-link { color: white; }
+        .offer { background: #ffcc00; padding: 20px; text-align: center; font-size: 20px; font-weight: bold; }
     </style>
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">📦 عروضنا</a>
+            <a class="navbar-brand" href="#">📦 edigitalspacks</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,10 +51,16 @@
                 </ul>
             </div>
         </div>
-    </nav><!-- Hero Section -->
+    </nav><!-- Limited Offer -->
+<div class="offer">
+    ⏳ عرض خاص لمدة 40 دقيقة فقط! السعر: 40 درهم
+    <br>
+    ينتهي خلال: <span id="countdown">40:00</span>
+</div>
+
+<!-- Hero Section -->
 <section class="hero text-center">
     <h1 class="mb-4">🎁 ماذا ستحصل عليه؟</h1>
-    <p class="text-danger fw-bold">⏳ العرض محدود، سارع الآن!</p>
     <a href="https://wa.me/yourwhatsappnumber" class="btn cta-btn mt-3">💬 اطلب نسختك عبر واتساب</a>
 </section>
 
